Fix ToC cell alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -95,6 +95,7 @@ tr {
 
 td {
   padding: 0;
+  vertical-align: top;
 }
 
 
